--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <br>  &thinsp;   Military Logistics Services provides end-to-end solutions for efficient and secure transportation, supply, and support operations.
               <br>   <br> &nbsp;  We are committed to delivering reliable logistics services tailored to meet the unique demands of military and defense sectors.
              <br>    <br> &thinsp; At Military Logistics Services LLC (MLS), we deliver military-grade logistics and maintenance solutions, tailored for the rigorous demands of defense operations.
-               <br>  <br>  &thinsp; With Cosmic Industries as our dedicated civilian and military tech services branch, we extend our mission beyond traditional logistics—offering expertise in automotive technology, HVAC services, cybersecurity, and computer repair. Built on a foundation of service excellence, MLS and Cosmic Industries are committed to supporting veterans, active-duty personnel, and civilians with unmatched reliability and a community-first approach. 
+               <br>  <br>  &thinsp; With Cosmic Industries as our dedicated civilian and military tech services branch, we extend our mission beyond traditional logistics—offering expertise in automotive technology, HVAC services, cybersecurity, and computer repair.   <br>&thinsp; Built on a foundation of service excellence, MLS and Cosmic Industries are committed to supporting veterans, active-duty personnel, and civilians with unmatched reliability and a community-first approach. 
            <br>      <br>  &nbsp; Whether for mission-critical needs or everyday support, we bring military standards to every project, ensuring secure, efficient, and skilled solutions for all.
 
             </p>
