--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
              <br>    <br> &thinsp; At Military Logistics Services LLC (MLS), we deliver military-grade logistics and maintenance solutions, tailored for the rigorous demands of defense operations.
                <br>  <br>  &thinsp; With Cosmic Industries as our dedicated civilian and military tech services branch, we extend our mission beyond traditional logistics—offering expertise in automotive technology, HVAC services, cybersecurity, and computer repair.   <br>  <br> &thinsp; Built on a foundation of service excellence, MLS and Cosmic Industries are committed to supporting veterans, active-duty personnel, and civilians with unmatched reliability and a community-first approach. 
            <br>      <br>  &nbsp; Whether for mission-critical needs or everyday support, we bring military standards to every project, ensuring secure, efficient, and skilled solutions for all.
-
+  <br>   <br>  &nbsp; &nbsp;Military-Grade Maintenance for Every Mission
             </p>
         </section>
 
