--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <!-- Boilerplate Section -->
         <section id="boilerplate" aria-labelledby="about-title">
             <h2 id="about-title">About Us</h2>
-            <p>
-              <br>  &thinsp;   Military Logistics Services provides end-to-end solutions for efficient and secure transportation, supply, and support operations.
+            <p><hr>
+               &thinsp;   Military Logistics Services provides end-to-end solutions for efficient and secure transportation, supply, and support operations.
               <br>   <br> &nbsp;  We are committed to delivering reliable logistics services tailored to meet the unique demands of military and defense sectors.
              <br>    <br> &thinsp; At Military Logistics Services LLC (MLS), we deliver military-grade logistics and maintenance solutions, tailored for the rigorous demands of defense operations.
                <br>  <br>  &thinsp; With Cosmic Industries as our dedicated civilian and military tech services branch, we extend our mission beyond traditional logistics—offering expertise in automotive technology, HVAC services, cybersecurity, and computer repair.   <br>  <br> &thinsp; Built on a foundation of service excellence, MLS and Cosmic Industries are committed to supporting veterans, active-duty personnel, and civilians with unmatched reliability and a community-first approach. 
@@ -51,7 +51,7 @@
 
     <footer role="contentinfo">
         <p>&copy; 2024 Military Logistics Services. All Rights Reserved∆.
-          <br> <hr><br>  &nbsp; &nbsp;Military-Grade Maintenance for Every Mission
+          <br> <hr>  &nbsp; &nbsp;Military-Grade Maintenance for Every Mission
               </p>
     </footer>
 
