--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Responsive Header with Hamburger Menu -->
     <header role="banner">
         <img src="logo2.jpg" alt="Military Logistics Services Logo" class="logo" role="img" aria-label="Company Logo">
-        <h1>Military Logistics Services</h1>
+        <h1><em>Military Logistics Services</em></h1>
 
         <!-- Hamburger Menu for Mobile View -->
         <nav role="navigation" aria-label="Main Navigation" class="nav-menu">
@@ -23,7 +23,7 @@
                 &#9776;
             </button>
             <div class="nav-links" id="navLinks">
-                <a href="index.html">Home</a>
+             <i>  <a href="index.html">Home</a> </i> 
                 <a href="about.html">About Us</a>
                 <a href="fleet.html">Our Fleet</a>
                 <a href="maintenance.html">Maintenance & Support</a>
@@ -40,9 +40,9 @@
             <p><hr>
               <br> &thinsp;   Military Logistics Services provides end-to-end solutions for efficient and secure transportation, supply, and support operations.
               <br>   <br> &nbsp;  We are committed to delivering reliable logistics services tailored to meet the unique demands of military and defense sectors.
-             <br>    <br> &thinsp; At Military Logistics Services LLC (MLS), we deliver military-grade logistics and maintenance solutions, tailored for the rigorous demands of defense operations.
-               <br>  <br>  &thinsp; With Cosmic Industries as our dedicated civilian and military tech services branch, we extend our mission beyond traditional logistics—offering expertise in automotive technology, HVAC services, cybersecurity, and computer repair.   <br>  <br> &thinsp; Built on a foundation of service excellence, MLS and Cosmic Industries are committed to supporting veterans, active-duty personnel, and civilians with unmatched reliability and a community-first approach. 
-           <br>      <br>  &nbsp; Whether for mission-critical needs or everyday support, we bring military standards to every project, ensuring secure, efficient, and skilled solutions for all.
+              <br>   <br> &thinsp; At Military Logistics Services LLC (MLS), we deliver military-grade logistics and maintenance solutions, tailored for the rigorous demands of defense operations.
+              <br>   <br>  &thinsp; With Cosmic Industries as our dedicated civilian and military tech services branch, we extend our mission beyond traditional logistics—offering expertise in automotive technology, HVAC services, cybersecurity, and computer repair.   <br>  <br> &thinsp; Built on a foundation of service excellence, MLS and Cosmic Industries are committed to supporting veterans, active-duty personnel, and civilians with unmatched reliability and a community-first approach. 
+              <br>   <br>  &nbsp; <i> Whether for mission-critical needs or everyday support, we bring military standards to every project, ensuring secure, efficient, and skilled solutions for all. </i>
     </p>
         </section>
 
